Added Results Datagrid to ResultsView.xaml and assicated stuff

--- a/Rankalicious/RankaliciousWPF/Views/ScraperView.xaml
+++ b/Rankalicious/RankaliciousWPF/Views/ScraperView.xaml
@@ -4,9 +4,11 @@
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Margin="0,100,10,0" 
+             d:DesignHeight="Auto" d:DesignWidth="300">
+    <Grid Margin="0,5,0,0" 
                       Grid.IsSharedSizeScope="True"
                         Width="Auto">
         <Grid.ColumnDefinitions>
@@ -15,6 +17,7 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -36,6 +39,7 @@
                       IsEditable="True"
                       MaxDropDownHeight="125"
                       Text="{Binding ScraperModel.SearchTerms}"
+                      SelectedValue="{Binding ScraperModel.SearchTerms}"
                       Width="200"
                       Grid.IsSharedSizeScope="True"
                       ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -58,37 +62,56 @@
                       IsEditable="True"
                       ItemsSource="{Binding Albums}"
                       MaxDropDownHeight="125"
-                      Text="{Binding ScraperModel.UrlToFind}"
+                      Text="{Binding UrlToFind, UpdateSourceTrigger=PropertyChanged }"
+                      SelectedValue="{Binding UrlToFind, UpdateSourceTrigger=PropertyChanged }"
                       Width="200"
                       Grid.IsSharedSizeScope="True"
                       ScrollViewer.HorizontalScrollBarVisibility="Auto"
                       ToolTip="Enter the URL you want to find the ranking of"
                       IsTabStop="True" />
 
+        
+
         <TextBlock Grid.Column="0"
                                Grid.Row="2"
                                VerticalAlignment="Bottom"
                                HorizontalAlignment="Right"
                                Margin="0, 0, 0, 4"
-                               Text="GridLines" />
-        <Button 
-                    Grid.Column="1"
-                    Grid.Row="2"
-                    VerticalAlignment="Center"
-                    Margin="10, 5, 0, 0"
-                    Width="200"
-                    Name="DoScrap"
-                    Content="Get Ranks" 
-            />
-
+                               Text="Results" />
+        <Controls:NumericUpDown Value="{Binding ScraperModel.NumOfResultsToReturn}"
+                              Speedup="false"
+                              Grid.Column="1"
+                              Grid.Row="2"
+                              Maximum="100"
+                              Minimum="0"
+                              VerticalAlignment="Center"
+                              Margin="10, 5, 0, 0"
+                              Width="200"/>
         <TextBlock Grid.Column="0"
                                Grid.Row="3"
                                VerticalAlignment="Bottom"
                                HorizontalAlignment="Right"
                                Margin="0, 0, 0, 4"
+                               Text="GridLines" />
+        <Button  Grid.Column="1" Grid.Row="3" VerticalAlignment="Center" Margin="10, 5, 0, 0"
+                    Width="200"
+                    Name="DoScrap"
+                    Content="Get Ranks" >
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="Click">
+                    <cal:ActionMessage MethodName="DoScrap" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </Button>
+
+        <TextBlock Grid.Column="0"
+                               Grid.Row="4"
+                               VerticalAlignment="Bottom"
+                               HorizontalAlignment="Right"
+                               Margin="0, 0, 0, 4"
                                Text="Results" />
         <ComboBox Grid.Column="1"
-                              Grid.Row="3"
+                              Grid.Row="4"
                               VerticalAlignment="Center"
                               Margin="10, 5, 0, 0"
                               Width="200"
