--- a/Rankalicious/RankaliciousWPF/Views/ShellView.xaml
+++ b/Rankalicious/RankaliciousWPF/Views/ShellView.xaml
@@ -1,45 +1,54 @@
 <Controls:MetroWindow x:Class="RankaliciousWPF.Views.ShellView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:cal="http://www.caliburnproject.org"
+                      
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:viewModels="clr-namespace:RankaliciousWPF.ViewModels"
                       mc:Ignorable="d"
                       d:DataContext="{x:Type viewModels:ShellViewModel}"
                       Title="{Binding WindowTitle}"
-                      Width="800"
-                      Height="600"
+                      MinWidth="1000"
+                      MinHeight="600"
+                      MaxWidth="1000"
+                      MaxHeight="600"
                       BorderThickness="1"
                       SaveWindowPosition="True"
                       WindowStartupLocation="CenterScreen"
                       BorderBrush="{DynamicResource AccentColorBrush}"
                       >
-     <Window.DataContext>
+    <Window.DataContext>
         <!-- Declaratively create an instance of our SongViewModel -->
         <viewModels:ScraperViewModel />
     </Window.DataContext>
-   <Controls:MetroWindow.Flyouts>
-        <Controls:FlyoutsControl x:Name="Flyouts">
-            <Controls:FlyoutsControl.ItemContainerStyle>
-                <Style BasedOn="{StaticResource {x:Type Controls:Flyout}}" TargetType="{x:Type Controls:Flyout}">
-                    <Setter Property="Header" Value="{Binding Header}" />
-                    <Setter Property="IsOpen" Value="{Binding IsOpen}" />
-                    <Setter Property="Position" Value="{Binding Position}" />
-                </Style>
-            </Controls:FlyoutsControl.ItemContainerStyle>
-        </Controls:FlyoutsControl>
-    </Controls:MetroWindow.Flyouts>
-    
     <Grid>
-        
-        <StackPanel Margin="10" HorizontalAlignment="Left" Width="Auto" Height="Auto">
-            
-            <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="650"/>
+        </Grid.RowDefinitions>
+        <Grid Column="0" Row="1">
+        <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="325"/>
+            <ColumnDefinition Width="650"/>
+        </Grid.ColumnDefinitions>
+            <Grid
+                Column="0"
+                Margin="5,0,0,0">
                 <ContentControl x:Name="ScraperView" />
             </Grid>
-        </StackPanel>
+            <Grid
+                Column="1"
+                Margin="5,0,0,0">
+                <ContentControl x:Name="ResultsView" />
+            </Grid>
+        </Grid>
+        </Grid>
     </Grid>
 
 </Controls:MetroWindow>
